# sigscanner

./: CMakeLists.txt  README.md  sigscanner.h
test/: sigscanner_test.sln
test/src/: main.cc  sigscanner_test.vcxproj  sigscanner_test.vcxproj.filters
